fixed body overflow css

--- a/styles.css
+++ b/styles.css
@@ -422,7 +422,7 @@ body {
     min-height: 100vh;
     max-width: 100vw;
     max-height: calc(100vh + 1000px);
-    overflow: hidden;
+    overflow-x: hidden;
 
 }
 
